@@ -20,6 +20,10 @@ XMLRPC
 ------
 Makes an FS object available over XMLRPC. See :mod:`fs.expose.xmlrpc`
 
+Import Hook
+-----------
+Allows importing python modules from the files in an FS object. See :mod:`fs.expose.importhook`
+
 Django Storage
 --------------
 Connects FS objects to Django. See :mod:`fs.expose.django_storage`
